src/test/deca/codegen/valid/black-box/modulo.deca
{
    int a = 100 % 2;
    int b = 101 % 2;
    print(a);
    print(b);
    print(100 % 2);
    print(101 % 2);
}