src/test/deca/codegen/invalid/black-box/mod_zero_in_variable.deca
{
    int a = 2 % 0;
    print(a);
}
